# djangoProject

./: pyproject.toml  readme.md
tests/: .gitignore
