[tool.poetry]
name = "django"
version = "0.1.0"
description = ""
authors = ["sayrexxx <reshetneff2013@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
Django = "^5.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
